AC_PREREQ(2.61)
AC_INIT([tdk-chx01-get-data-app], 1.0.0)
AM_INIT_AUTOMAKE([foreign])
AM_MAINTAINER_MODE
AC_CONFIG_HEADER([config.h])
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

AM_PROG_LIBTOOL

AC_DISABLE_STATIC
AC_ENABLE_SHARED

AC_CONFIG_FILES([      \
      Makefile
      ])
AC_OUTPUT
